--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stencil-with-semantic-release",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
