--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stencil-with-semantic-release",
   "version": "0.0.0-development",
-  "description": "Stencil Component Starter",
+  "description": "Example of Stencil component with semantic-release to npm with GitHub Actions ",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
